Revise README with comprehensive game details
Expanded the README to provide detailed information about the game features, modes, long-term direction, project structure, and troubleshooting steps.